--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "2.6.1"
   },
   "dependencies": {
+    "random-hex-color": "^1.0.1",
     "react": "15.6.1",
     "react-dom": "15.6.1"
   }
